[project]
name = "agentic-api-cli"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.116.1",
    "groq>=0.31.1",
    "httpx>=0.28.1",
    "openai>=1.106.1",
    "pydantic>=2.11.7",
    "python-dotenv>=1.1.1",
    "pyyaml>=6.0.2",
    "rich>=14.1.0",
    "typer[all]>=0.17.3",
    "uvicorn>=0.35.0",
]
